fixes alignment of header icons

--- a/app/components/HeaderBar/HeaderBar.scss
+++ b/app/components/HeaderBar/HeaderBar.scss
@@ -34,7 +34,7 @@
     cursor: pointer;
 
     span {
-      margin-right: 10px;
+      margin-left: 10px;
     }
   }
 
