--- a/app/containers/Settings/Settings.scss
+++ b/app/containers/Settings/Settings.scss
@@ -60,12 +60,6 @@ $panel-top-margin: 25px;
     align-items: center;
     font-size: 14px;
 
-    svg {
-      path {
-        fill: #69e27e;
-      }
-    }
-
     .add {
       width: $add-icon-size;
       height: $add-icon-size;
